--- a/src/components/middle/MiddleHeader.scss
+++ b/src/components/middle/MiddleHeader.scss
@@ -194,7 +194,7 @@
       }
     }
 
-    img {
+    & > img {
       width: 2.25rem;
       height: 2.25rem;
       object-fit: cover;
